client/src/stylesheets/Footer.css
/*Footer is divided into 3 columns, the third being empty space*/
.Footer {
  width: 100%;
  display: flex;
  flex-direction: row;
  position: absolute;
  bottom: 0;
}

#FooterLeft {
  width: 33%;
}

#FooterLogo {
  padding-left: 11.5%;
  padding-top: 9%;
  margin-bottom: -17px;
}

#Address {
  padding-left: 9%;
  padding-bottom: 30px;
  font-size: 24px;
  font-weight: 400;
  color: #5632a6;
  line-height: 120%;
}

#Socials {
  width: 33%;
  text-align: center;
}

#SocialTitle {
  font-size: 24px;
  font-weight: 700;
  color: #5632a6;
  padding-top: 40px;
}

#SocialImages {
  display: flex;
  flex-direction: row;
  gap: 40px;
  justify-content: center;
}

#SocialImages > img {
  /* prevents image squash*/
  align-self: center;
}

/*Mobile*/
@media only screen and (max-width: 850px) {
  .Footer {
    flex-direction: column;
    text-align: center;
  }

  #FooterLeft {
    width: 100%;
  }

  #FooterLogo {
    padding-left: 0;
  }

  #Address {
    padding-bottom: 0;
    padding-left: 0;
    margin-bottom: -10px;
  }

  #TextBreak {
    display: none;
  }

  #Socials {
    width: 100%;
  }

  #SocialTitle {
    padding-top: 0;
  }

  #SocialImages {
    padding-bottom: 5%;
  }
}

